nginx/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccount: scc-anyuid
      serviceAccountName: scc-anyuid
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
