nginx/nginx-route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  to:
    kind: Service
    name: nginxsvc
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
